Bug-Navbar: Fixed drop down overlap issue for small screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -528,6 +528,9 @@ h6 {
     .contact-background {
         background-image:none
     }
+    .dropdown-menu {
+        font-size: 0.7rem;
+    }
 }
 
 
